[css-contain] Fix size containment in elements with scrollbars

To determine the size of an element with "contain: size"
we should treat it as having no contents
(https://drafts.csswg.org/css-contain/#containment-size).

Scrollbars are not part of the box's contents,
so we should take them into account to determine box size.

BUG=872794
TEST=external/wpt/css/css-contain/contain-size-scrollbars-001.html

Change-Id: I166af8469243a9c3b52c3e30569d1d81c3de6e9e
Reviewed-on: https://chromium-review.googlesource.com/1206210
Commit-Queue: Manuel Rego <rego@igalia.com>
Reviewed-by: Morten Stenshorne <mstensho@chromium.org>
Cr-Commit-Position: refs/heads/master@{#588809}