third_party/blink/renderer/core/layout/layout_box.cc
@@ -2652,9 +2652,10 @@ static float GetMaxWidthListMarker(const LayoutBox* layout_object) {
 DISABLE_CFI_PERF
 void LayoutBox::ComputeLogicalWidth(
     LogicalExtentComputedValues& computed_values) const {
-  computed_values.extent_ = ShouldApplySizeContainment()
-                                ? BorderAndPaddingLogicalWidth()
-                                : LogicalWidth();
+  computed_values.extent_ =
+      ShouldApplySizeContainment()
+          ? BorderAndPaddingLogicalWidth() + ScrollbarLogicalWidth()
+          : LogicalWidth();
   computed_values.position_ = LogicalLeft();
   computed_values.margins_.start_ = MarginStart();
   computed_values.margins_.end_ = MarginEnd();
@@ -3135,9 +3136,10 @@ static inline Length HeightForDocumentElement(const Document& document) {
 
 void LayoutBox::ComputeLogicalHeight(
     LogicalExtentComputedValues& computed_values) const {
-  LayoutUnit height = ShouldApplySizeContainment()
-                          ? BorderAndPaddingLogicalHeight()
-                          : LogicalHeight();
+  LayoutUnit height =
+      ShouldApplySizeContainment()
+          ? BorderAndPaddingLogicalHeight() + ScrollbarLogicalHeight()
+          : LogicalHeight();
   ComputeLogicalHeight(height, LogicalTop(), computed_values);
 }
 
